<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/titolo_aggiungi"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputNomeEsame"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titolo"
        android:layout_margin="10dp"
        android:hint="@string/nome_esame"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_esame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
            android:drawablePadding="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputNumeroCFU"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputNomeEsame"
        android:layout_margin="10dp"
        android:hint="@string/numero_cfu"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numero_cfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_numbers_24"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputVoto"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputNumeroCFU"
        android:layout_margin="10dp"
        android:hint="@string/voto_ottenuto"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voto_ottenuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_grade_24"
            android:drawablePadding="20dp"
            android:textColor="@color/white"
            android:inputType="number"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:id="@+id/aggiungibtn"
        android:layout_below="@id/layoutInputVoto"
        android:text="@string/aggiungi"
        android:textSize="20sp"
        android:backgroundTint="@color/celeste"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/torna_home"
        android:layout_below="@id/aggiungibtn"
        android:text="@string/torna_home"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="19sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"/>
</RelativeLayout>