<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context="Registrazione">

    <TextView
        android:id="@+id/titolo_accedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/titolo_registrazione"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputUsername"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titolo_accedi"
        android:layout_margin="10dp"
        android:hint="@string/username"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:inputType="textFilter"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputName"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputUsername"
        android:layout_margin="10dp"
        android:hint="@string/nome"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:inputType="textFilter"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputSurname"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputName"
        android:layout_margin="10dp"
        android:hint="@string/cognome"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="20dp"
            android:inputType="textFilter"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputBirthdate"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputSurname"
        android:layout_margin="10dp"
        android:hint="@string/data_di_nascita"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_date_range_24"
            android:drawablePadding="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openDatePicker"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputPassword"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutInputBirthdate"
        android:layout_margin="10dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/background_form"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:id="@+id/registerbtn"
        android:layout_below="@id/layoutInputPassword"
        android:text="@string/registrati"
        android:textSize="20sp"
        android:backgroundTint="@color/celeste"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/link_registrazione"
        android:layout_below="@id/registerbtn"
        android:text="@string/link_accedi"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/link_accedi2"
        android:layout_below="@id/link_registrazione"
        android:text="@string/accedi_underline"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="19sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"/>
</RelativeLayout>