<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/bg_view"
        android:id="@+id/top_view"/>

    <!-- Visualizzazione medie -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:id="@+id/medie"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <!-- Visualizzazione media aritmetica -->
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voto_base"
                    android:textSize="40sp"
                    android:textColor="@color/purple"
                    android:id="@+id/media_aritmetica"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_aritmetica"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Visualizzazione media ponderata -->
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voto_base"
                    android:textSize="40sp"
                    android:textColor="@color/purple"
                    android:id="@+id/media_ponderata"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_ponderata"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <!-- Visualizzazione voto di laurea -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medie"
        android:id="@+id/voto_laurea"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <!-- Visualizzazione voto di laurea -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/voto_di_laurea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voto_base"
                android:textColor="@color/purple"
                android:layout_gravity="center"
                android:textSize="45sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voto_di_laurea"
                android:layout_gravity="bottom|center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Visualizzazione bottoni -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voto_laurea"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/bottoni">

        <!-- Bottone Esami registrati -->
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            android:id="@+id/esami_registrati">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_book_24"
                    android:layout_gravity="center"
                    android:contentDescription="@string/esami_registrati" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esami_registrati"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Bottone Aggiungi Esame -->
        <androidx.cardview.widget.CardView
            android:id="@+id/aggiungi_esame"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_library_add_24"
                    android:contentDescription="@string/aggiungi_esame" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/aggiungi_esame"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <!-- Pulsante disconnetiti -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottoni"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="10dp">

        <!-- Visualizzazione voto di laurea -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutbtn"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/disconnettiti"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/titolo_accedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/titolo"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>