<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_esame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/nome_esame"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esempio_cfu"
                    android:id="@+id/numero_cfu"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/esempio_voto"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/voto_esame"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    android:elevation="3dp"
                    android:id="@+id/rimuovi_esame">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_delete_forever_24"
                        android:background="@color/purple"
                        android:scaleType="center"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>